fix spacing on tag page layout

--- a/_src/_includes/_scss/_layout.scss
+++ b/_src/_includes/_scss/_layout.scss
@@ -119,6 +119,10 @@ footer {
     &:first-child {
       margin-top: 0;
     }
+
+    & > :first-child:not(header) {
+      margin-top: $flow6;
+    }
   }
 
   .top-text {
